@@ -7,14 +7,9 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.DateTimeException;
-import java.time.LocalDate;
 import java.util.Map;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang3.StringUtils;
 import org.apache.http.HttpEntity;
 import org.apache.http.client.methods.CloseableHttpResponse;
 import org.apache.http.entity.ContentType;
@@ -30,9 +25,10 @@ import it.uniroma2.art.semanticturkey.extension.extpts.deployer.Deployer;
 import it.uniroma2.art.semanticturkey.extension.extpts.deployer.RepositorySource;
 import it.uniroma2.art.semanticturkey.extension.extpts.deployer.RepositorySourcedDeployer;
 import it.uniroma2.art.semanticturkey.extension.impl.deployer.http.AbstractHTTPDeployer;
+import it.uniroma2.art.semanticturkey.extension.impl.deployer.ontoportal.strategy.ServerCommunicationStrategy;
 
 /**
- * Implementation of the {@link Deployer} that uses the OntoPortal REST API.
+ * Implementation of the {@link Deployer} extension point that uses the OntoPortal REST API.
  * 
  * @author <a href="mailto:fiorelli@info.uniroma2.it">Manuel Fiorelli</a>
  * @see <a href="https://ontoportal.org/">OntoPortal Alliance</a>
@@ -49,8 +45,11 @@ public class OntoPortalDeployer extends AbstractHTTPDeployer<RepositorySource>
 	// can be used to register resources to be freed after the deployment
 	protected ThreadLocal<Closer> requestScopedResourcesToRelease;
 
+	private ServerCommunicationStrategy strategy;
+
 	public OntoPortalDeployer(OntoPortalDeployerConfiguration conf) {
 		this.conf = conf;
+		this.strategy = ServerCommunicationStrategy.getStrategy(conf);
 		this.requestScopedResourcesToRelease = ThreadLocal.withInitial(Closer::create);
 	}
 
@@ -79,52 +78,12 @@ public class OntoPortalDeployer extends AbstractHTTPDeployer<RepositorySource>
 
 	@Override
 	protected Map<String, String> getHttpRequestHeaders() {
-		return ImmutableMap.of("Authorization", String.format("apikey token=%s", conf.apiKey));
+		return this.strategy.getHttpRequestHeaders();
 	}
-
-	public static Pattern CONTACT_PATTERN = Pattern.compile("^\\s*(?<name>.+)\\s*\\((?<email>.+)\\s*\\)$");
 
 	protected HttpEntity createHttpEntity(RepositorySource source) throws IOException {
 		MultipartEntityBuilder entityBuilder = MultipartEntityBuilder.create();
-		entityBuilder.addTextBody("acronym", conf.acronym);
-		entityBuilder.addTextBody("description", conf.description);
-		if (StringUtils.isNotBlank(conf.version)) {
-			entityBuilder.addTextBody("version", conf.version);
-		}
-		entityBuilder.addTextBody("hasOntologyLanguage", conf.hasOntologyLanguage);
-		entityBuilder.addTextBody("status", conf.status);
-		if (StringUtils.isNotBlank(conf.released)) {
-			try {
-				LocalDate.parse(conf.released); // used only to validate the input
-			} catch (DateTimeException e) {
-				throw new RuntimeException("Invalid release date: " + conf.released);
-			}
-			entityBuilder.addTextBody("released", conf.released);
-		}
-
-		if (conf.contact.size() < 1) {
-			throw new RuntimeException(
-					"An ontology submission to an OntoPortal repository shall have at least one contact");
-		}
-
-		for (String encodedContact : conf.contact) {
-			Matcher m = CONTACT_PATTERN.matcher(encodedContact);
-			if (!m.find()) {
-				throw new RuntimeException("Badly formatted contact: " + encodedContact);
-			}
-			entityBuilder.addTextBody("contact[]name", m.group("name"));
-			entityBuilder.addTextBody("contact[]email", m.group("email"));
-		}
-
-		if (conf.homepage != null && StringUtils.isNoneBlank(conf.homepage)) {
-			entityBuilder.addTextBody("homepage", conf.homepage);
-		}
-		if (conf.documentation != null && StringUtils.isNoneBlank(conf.documentation)) {
-			entityBuilder.addTextBody("documentation", conf.documentation);
-		}
-		if (conf.publication != null && StringUtils.isNoneBlank(conf.publication)) {
-			entityBuilder.addTextBody("publication", conf.publication);
-		}
+		this.strategy.enrichRequestBodyWithConfigurationParams(entityBuilder);
 
 		Path tempFilePath = Files.createTempFile("ontoportal_deployer", "rdf");
 		this.requestScopedResourcesToRelease.get().register(() -> Files.deleteIfExists(tempFilePath));
